2010-08-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Check for PostgreSQL 9.0 hex binary-escaping format.
 src/binarystring.cxx:
 - Refactor unescaping.
 - Work around hex-format support in PQunescapeBytea.
2010-06-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, src/transaction_base.cxx,
 test/unit/test_binarystring.cxx:
 - Added quote() for binarystring.
 - More testing of escaping/unescaping.
2010-06-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Added missing 10 to hex digits.
2010-06-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Support 9.0-style hex-escaping on ancient libpq.
 test/unit/test_binarystring.cxx:
 - New
2010-06-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/*:
 - Lots more automatically-stored libpq config headers.
2010-06-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/7.3/config-internal-libpq.h:
 - Sample header for libpq 7.3.
 test/unit/test_error_verbosity.cxx:
 - Skip test of enum correspondence if libpq doesn't define the enum.
2010-06-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest, tools/preprelease:
 - Save copies of generated config headers.
2010-02-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure, configure.ac, configure.ac.in:
 - Fixed #104: -Werror option always used.  Thanks Ray Dassen.
 - Works around RedHat gcc 4.1 problem.
 include/pqxx/util.hxx:
 - Removed failed attempt at working around RedHat gcc 4.1 problem.
2010-02-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
 - Hopefully fix problem with CentOS gcc 4.1, thanks Devrim Gunduz.
2010-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx, src/result.cxx:
 - Added empty()
 - Documented risk of empty slices triggering bugs.
 - Deprecation warning for tuple constructor; it's to become private.